✨ Feat: PR 파일 sha 필드 추가 및 전체 코드 기반 GPT 리뷰 로직 구현